@@ -11,12 +11,14 @@
 		"LSlib >= 2020.8.22",
 		"flib >= 0.3.0",
 		"informatron",
+		"? 5dim_battlefield >= 1.0.4",
 		"? angelsrefining",
 		"? angelspetrochem",
 		"? bobmining >= 1.0.0",
 		"? bobores >= 1.0.0",
 		"? bobrevamp >= 1.0.0",
 		"? bobplates >= 1.0.0",
+		"? DiscoScience >= 1.0.0",
 		"? Krastorio2",
 		"? Mining_Drones",
 		"? Orbital Ion Cannon",
