@@ -3,9 +3,10 @@ Version: 1.0.5
   Changes:
     - Added warning to not run the main Tiberium mod and the beta Tiberium mod at the same time
     - Lowered selection priority of SRF walls, so you can now mine things from underneath SRF walls
-    - Tiberium Only map gen preset to be generated earlier during startup with the hope that more mods with apply their particular changes to it
+    - Tiberium Science now makes labs illuminate with bright green light when the DiscoScience mod is active
+    - Tiberium Only map gen preset now generated earlier during startup so that other mods will be more likely to correctly apply their changes to it
   Bugfixes:
-    - Fixed mining drills placed before mod was present not activating when Tiberium ore grows underneath them
+    - Fixed mining drills placed before Tiberium mod was present not activating when Tiberium ore grows underneath them
     - Fixed growth interval not being updated when you /tibRebuildLists
     - Fixed crash from attempting to damage invalid entity
     - Fixed our recipe detection to match the automatic correction applied by base Factorio when amount_max is less thant amount_min
